# python-environment-tools

./: .gitignore  Cargo.toml  CodeQL.yml  README.md  SUPPORT.md  invoice.py  todo.md
crates/pet/: Cargo.toml  README.md  build.rs
crates/pet-cache/: Cargo.toml
crates/pet-conda/: Cargo.toml  README.md
crates/pet-conda/src/: conda_info.rs  conda_rc.rs  env_variables.rs  environment_locations.rs  environments.rs  lib.rs  manager.rs  mod.rs  package.rs  telemetry.rs  utils.rs
crates/pet-conda/tests/: ci_test.rs  common.rs  conda_rc_test.rs  environment_locations_test.rs  environments_test.rs  homebrew_base_test.rs  lib_test.rs  manager_test.rs  package_test.rs  utils_test.rs
crates/pet-conda/tests/unix/anaconda3-2023.03-without-history/conda-meta/: python-dateutil-2.8.2-pyhd3eb1b0_0.json
crates/pet-conda/tests/unix/conda_env_with_python_upgrade/conda-meta/: history  python-3.9.21-h789abc_0.json
crates/pet-conda/tests/unix/conda_rc_root/user_home/: .condarc
crates/pet-conda/tests/unix/env_with_python3/conda-meta/: _libgcc_mutex-0.1-main.json  _openmp_mutex-5.1-1_gnu.json  bzip2-1.0.8-h5eee18b_6.json  ca-certificates-2025.7.15-h06a4308_0.json  expat-2.7.1-h6a678d5_0.json  history  ld_impl_linux-64-2.40-h12ee557_0.json  libffi-3.4.4-h6a678d5_1.json  libgcc-ng-11.2.0-h1234567_1.json  libgomp-11.2.0-h1234567_1.json  libstdcxx-ng-11.2.0-h1234567_1.json  libuuid-1.41.5-h5eee18b_0.json  libxcb-1.17.0-h9b100fa_0.json  ncurses-6.5-h7934f7d_0.json  openssl-3.0.17-h5eee18b_0.json  pip-25.1-pyhc872135_2.json  pthread-stubs-0.3-h0ce48e5_1.json  python-3.10.18-h1a3bd86_0.json  readline-8.3-hc2a1206_0.json  setuptools-78.1.1-py310h06a4308_0.json  sqlite-3.50.2-hb25bd0a_1.json  tk-8.6.14-h993c535_1.json  tzdata-2025b-h04d1e81_0.json  wheel-0.45.1-py310h06a4308_0.json  xorg-libx11-1.8.12-h9b100fa_1.json  xorg-libxau-1.0.12-h9b100fa_0.json  xorg-libxdmcp-1.1.5-h9b100fa_0.json  xorg-xorgproto-2024.1-h5eee18b_1.json  xz-5.6.4-h5eee18b_1.json  zlib-1.2.13-h5eee18b_1.json
crates/pet-conda/tests/unix/env_with_python3/etc/: aau_token
crates/pet-conda/tests/unix/env_with_python3/include/: expat_config.h
crates/pet-conda/tests/unix/env_with_python3/lib/: libX11-xcb.so.1.0.0  libX11.so.6.4.0  libXau.so.6.0.0  libXdmcp.so.6.0.0  libexpat.so.1  libexpat.so.1.10.2  libformw.so.6.5  libhistory.so.8  libhistory.so.8.3  libncursesw.so.6.5  libreadline.so.8  libreadline.so.8.3  libsqlite3.so.3.50.2  libssl.so.3  libtinfow.so.6.5  libxcb-composite.so.0.0.0  libxcb-damage.so.0.0.0  libxcb-dbe.so.0.0.0  (+25 more)
crates/pet-core/: Cargo.toml
crates/pet-core/src/: arch.rs  cache.rs  env.rs  lib.rs  manager.rs  os_environment.rs  python_environment.rs  pyvenv_cfg.rs  reporter.rs
crates/pet-core/src/telemetry/: inaccurate_python_info.rs  missing_conda_info.rs  missing_poetry_info.rs  mod.rs  refresh_performance.rs
crates/pet-env-var-path/: Cargo.toml
crates/pet-env-var-path/src/: env_variables.rs  lib.rs
crates/pet-fs/: Cargo.toml
crates/pet-fs/src/: glob.rs  lib.rs  path.rs
crates/pet-global-virtualenvs/: Cargo.toml
crates/pet-global-virtualenvs/src/: lib.rs
crates/pet-hatch/: Cargo.toml
crates/pet-hatch/src/: lib.rs
crates/pet-homebrew/: Cargo.toml  README.md
crates/pet-homebrew/src/: env_variables.rs  environment_locations.rs  environments.rs  lib.rs  sym_links.rs
crates/pet-jsonrpc/: Cargo.toml
crates/pet-jsonrpc/src/: core.rs  lib.rs  server.rs
crates/pet-linux-global-python/: Cargo.toml
crates/pet-linux-global-python/src/: lib.rs
crates/pet-mac-commandlinetools/: Cargo.toml  README.md
crates/pet-mac-commandlinetools/src/: lib.rs
crates/pet-mac-python-org/: Cargo.toml  README.md
crates/pet-mac-python-org/src/: lib.rs
crates/pet-pipenv/: Cargo.toml  README.md
crates/pet-pipenv/src/: env_variables.rs  lib.rs  manager.rs
crates/pet-pixi/: Cargo.toml  README.md
crates/pet-pixi/src/: lib.rs
crates/pet-poetry/: Cargo.toml  README.md
crates/pet-poetry/src/: config.rs  env_variables.rs  environment.rs  environment_locations.rs  environment_locations_spawn.rs  lib.rs  manager.rs  pyproject_toml.rs  telemetry.rs
crates/pet-poetry/tests/: common.rs  config_test.rs  path_identification_test.rs
crates/pet-pyenv/: Cargo.toml  README.md
crates/pet-pyenv/src/: env_variables.rs  environment_locations.rs  environments.rs  lib.rs  manager.rs
crates/pet-pyenv/tests/: ci_test.rs  common.rs  pyenv_test.rs
crates/pet-python-utils/: Cargo.toml
crates/pet-python-utils/examples/: test_shim_detection.rs
crates/pet-python-utils/src/: build_details.rs  cache.rs  env.rs  executable.rs  fs_cache.rs  headers.rs  lib.rs  platform_dirs.rs  pyvenv_cfg.rs  version.rs
crates/pet-python-utils/tests/: cache_test.rs  common.rs  executable_test.rs  pyenv_shim_test.rs  sys_prefix_test.rs
crates/pet-reporter/: Cargo.toml
crates/pet-reporter/src/: cache.rs  collect.rs  environment.rs  json.rs  jsonrpc.rs  lib.rs  manager.rs  stdio.rs  test.rs
crates/pet-uv/: Cargo.toml
crates/pet-uv/src/: lib.rs
crates/pet-uv/tests/: integration_test.rs
crates/pet-venv/: Cargo.toml  README.md
crates/pet-venv/src/: lib.rs
crates/pet-venv/tests/: mod.rs
crates/pet-virtualenv/: Cargo.toml  README.md
crates/pet-virtualenv/src/: lib.rs
crates/pet-virtualenvwrapper/: Cargo.toml  README.md
crates/pet-virtualenvwrapper/src/: env_variables.rs  environment_locations.rs  environments.rs  lib.rs
crates/pet-windows-registry/: Cargo.toml  README.md
crates/pet-windows-registry/src/: environments.rs  lib.rs
crates/pet-windows-store/: Cargo.toml  README.md
crates/pet-windows-store/src/: env_variables.rs  environment_locations.rs  environments.rs  lib.rs
crates/pet-winpython/: Cargo.toml  README.md
crates/pet-winpython/src/: lib.rs
crates/pet/src/: find.rs  jsonrpc.rs  lib.rs  locators.rs  main.rs  resolve.rs  tests.rs
crates/pet/src/tests/: test_uv_integration.rs
crates/pet/tests/: ci_homebrew_container.rs  ci_jupyter_container.rs  ci_poetry.rs  ci_test.rs  cli_test.rs  common.rs  e2e_performance.rs  interpreterInfo.py  jsonrpc_client.rs  jsonrpc_server_test.rs
docs/: sample.js  (+3 more)
(+346 files in other folders)
