[package]
name = "pet-cache"
version = "0.1.0"
edition = "2021"

[target.'cfg(target_os = "windows")'.dependencies]
msvc_spectre_libs = { version = "0.1.1", features = ["error"] }

[dependencies]
pet-fs = { path = "../pet-fs" }
pet-python-utils = { path = "../pet-python-utils" }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
pet-core = { path = "../pet-core" }
log = "0.4.21"
