[package]
name = "pet-conda"
version = "0.1.0"
edition = "2021"

[dependencies]
pet-fs = { path = "../pet-fs" }
pet-python-utils = { path = "../pet-python-utils" }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
lazy_static = "1.4.0"
pet-core = { path = "../pet-core" }
log = "0.4.21"
regex = "1.10.4"
pet-reporter = { path = "../pet-reporter" }

[dev-dependencies]


[features]
ci = []