[package]
name = "pet-core"
version = "0.1.0"
edition = "2021"

[target.'cfg(target_os = "windows")'.dependencies]
msvc_spectre_libs = { version = "0.1.1", features = ["error"] }

[dependencies]
clap = { version = "4.5.4", features = ["derive", "cargo"] }
pet-fs = { path = "../pet-fs" }
serde = { version = "1.0.152", features = ["derive"] }
lazy_static = "1.4.0"
regex = "1.10.4"
log = "0.4.21"
serde_json = "1.0.93"
