[package]
name = "pet-fs"
version = "0.1.0"
edition = "2021"
license = "MIT"

[target.'cfg(target_os = "windows")'.dependencies]
msvc_spectre_libs = { version = "0.1.1", features = ["error"] }
windows-sys = { version = "0.59", features = ["Win32_Storage_FileSystem", "Win32_Foundation"] }

[dependencies]
glob = "0.3.1"
log = "0.4.21"
