[package]
name = "pet-fs"
version.workspace = true
edition.workspace = true
license.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
msvc_spectre_libs = { version = "0.1.1", features = ["error"] }
windows-sys = { version = "0.59", features = ["Win32_Storage_FileSystem", "Win32_Foundation"] }

[dependencies]
glob = "0.3.1"
lazy_static = "1.4.0"
log = "0.4.21"
