[package]
name = "pet-global-virtualenvs"
version = "0.1.0"
edition = "2021"
license = "MIT"

[target.'cfg(target_os = "windows")'.dependencies]
msvc_spectre_libs = { version = "0.1.1", features = ["error"] }

[dependencies]
pet-core = { path = "../pet-core" }
pet-fs = { path = "../pet-fs" }
pet-virtualenv = { path = "../pet-virtualenv" }
pet-conda = { path = "../pet-conda" }
log = "0.4.21"
