[package]
name = "pet-homebrew"
version = "0.1.0"
edition = "2021"

[dependencies]
pet-fs = { path = "../pet-fs" }
pet-python-utils = { path = "../pet-python-utils" }
pet-virtualenv = { path = "../pet-virtualenv" }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
lazy_static = "1.4.0"
pet-core = { path = "../pet-core" }
log = "0.4.21"
regex = "1.10.4"
