[package]
name = "pet-mac-python-org"
version = "0.1.0"
edition = "2021"

[target.'cfg(target_os = "windows")'.dependencies]
msvc_spectre_libs = { version = "0.1.1", features = ["error"] }

[dependencies]
pet-core = { path = "../pet-core" }
pet-python-utils = { path = "../pet-python-utils" }
pet-virtualenv = { path = "../pet-virtualenv" }
pet-fs = { path = "../pet-fs" }
log = "0.4.21"
