[package]
name = "pet-poetry"
version = "0.1.0"
edition = "2021"

[target.'cfg(target_os = "windows")'.dependencies]
msvc_spectre_libs = { version = "0.1.1", features = ["error"] }

[dependencies]
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
lazy_static = "1.4.0"
pet-core = { path = "../pet-core" }
pet-python-utils = { path = "../pet-python-utils" }
pet-virtualenv = { path = "../pet-virtualenv" }
pet-reporter = { path = "../pet-reporter" }
pet-fs = { path = "../pet-fs" }
log = "0.4.21"
regex = "1.10.4"
sha2 = "0.10.6"
base64 = "0.22.0"
toml = "0.8.14"
