[package]
name = "pet-python-utils"
version = "0.1.0"
edition = "2021"

[target.'cfg(target_os = "windows")'.dependencies]
msvc_spectre_libs = { version = "0.1.1", features = ["error"] }

[dependencies]
lazy_static = "1.4.0"
regex = "1.10.4"
pet-fs = { path = "../pet-fs" }
pet-core = { path = "../pet-core" }
serde = { version = "1.0.152", features = ["derive"] }
log = "0.4.21"
serde_json = "1.0.93"
sha2 = "0.10.6"
