[package]
name = "pet-python-utils"
version = "0.1.0"
edition = "2021"
license = "MIT"

[target.'cfg(target_os = "windows")'.dependencies]
msvc_spectre_libs = { version = "0.1.1", features = ["error"] }

[dependencies]
lazy_static = "1.4.0"
regex = "1.10.4"
pet-fs = { path = "../pet-fs" }
pet-core = { path = "../pet-core" }
serde = { version = "1.0.152", features = ["derive"] }
log = "0.4.21"
serde_json = "1.0.93"
sha2 = "0.10.6"
env_logger = "0.10.2"

[features]
ci = []
ci-jupyter-container = []
ci-homebrew-container = []
ci-poetry-global = []
ci-poetry-project = []
ci-poetry-custom = []

[dev-dependencies]
tempfile = "3.8"
