[package]
name = "pet-reporter"
version = "0.1.0"
edition = "2021"
license = "MIT"

[target.'cfg(target_os = "windows")'.dependencies]
msvc_spectre_libs = { version = "0.1.1", features = ["error"] }

[dependencies]
pet-core = { path = "../pet-core" }
pet-jsonrpc = { path = "../pet-jsonrpc" }
log = "0.4.21"
env_logger = "0.10.2"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
