[package]
name = "pet-windows-registry"
version = "0.1.0"
edition = "2021"

[target.'cfg(windows)'.dependencies]
winreg = "0.55.0"

[target.'cfg(target_os = "windows")'.dependencies]
msvc_spectre_libs = { version = "0.1.1", features = ["error"] }

[dependencies]
pet-windows-store = { path = "../pet-windows-store" }
pet-python-utils = { path = "../pet-python-utils" }
pet-virtualenv = { path = "../pet-virtualenv" }
pet-core = { path = "../pet-core" }
pet-fs = { path = "../pet-fs" }
pet-conda = { path = "../pet-conda" }
log = "0.4.21"
lazy_static = "1.4.0"
regex = "1.10.4"
