[package]
name = "pet-windows-store"
version = "0.1.0"
edition = "2021"

[target.'cfg(windows)'.dependencies]
winreg = "0.52.0"

[dependencies]
pet-core = { path = "../pet-core" }
pet-fs = { path = "../pet-fs" }
pet-python-utils = { path = "../pet-python-utils" }
log = "0.4.21"
lazy_static = "1.4.0"
regex = "1.10.4"
